build a static library for iOS

--- a/alvr/server/Cargo.toml
+++ b/alvr/server/Cargo.toml
@@ -7,7 +7,8 @@ authors = ["alvr-org", "Valve Corporation"]
 license = "MIT"
 
 [lib]
-crate-type = ["cdylib"]
+#crate-type = ["cdylib"]
+crate-type = ["staticlib"]
 
 [features]
 gpl = [] # Enable for FFmpeg support on Windows. Always enabled on Linux
